--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-asgiref @ file:///work/perseverance-python-buildout/croot/asgiref_1698866701569/work
-Django @ file:///work/perseverance-python-buildout/croot/django_1698884878321/work
-numpy==2.0.0
-pilgram==1.2.1
+asgiref==3.8.1
+Django==5.0.6
 pillow==10.4.0
-setuptools==69.5.1
-sqlparse @ file:///work/perseverance-python-buildout/croot/sqlparse_1698874574933/work
-wheel==0.43.0
+sqlparse==0.5.0
