--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.9,3.10.12,3.11,3.12,3.13]
+        python-version: [3.10.14,3.11,3.12]
 
     steps:
     - uses: actions/checkout@v4
@@ -23,4 +23,5 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
+        cd src 
         python manage.py test
