--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,14 +13,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Install Conda environment with Micromamba
+        uses: mamba-org/provision-with-micromamba@main
+        with:
+          cache-downloads: true
+          channels: "conda-forge,defaults"
+          environment-file: false
+          environment-name: conda-env-builder-test
+          extra-specs: "conda-lock=1.4.0"
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        conda create --name filterBoauty --file requirements.txt
+        conda activate filterBoauty 
     - name: Run Tests
       run: |
         cd src 
