--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,8 +28,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        conda create --name filterBoauty --file requirements.txt
-        conda activate filterBoauty 
+        conda env create -f environment.yml
+        conda activate filterBoa 
     - name: Run Tests
       run: |
         cd src 
