--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,15 +13,30 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Install Conda environment with Micromamba
+      uses:  mamba-org/provision-with-micromamba@main
+      with:
+        cache-downloads: true
+        channels: "conda-forge,defaults"
+        environment-file: environment.yml
+        environment-name: filterBoa
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Conda info
+      shell: bash -el {0}
+      run: conda info
+    - name: Conda list
+      shell: pwsh
+      run: conda list
+    - name: Environment
+      shell: bash -el {0}
+      run: printenv | sort    
     - name: Run Tests
+      shell: bash -el {0}
       run: |
         cd src 
         python manage.py test
